--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "formik": "^2.4.5",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.331.0",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
