--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "14.1.0",
     "next-auth": "^4.24.6",
     "next-themes": "^0.2.1",
+    "nodemailer": "^6.9.9",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
