--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
+    "husky": "^8.0.3",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "prisma": "^5.9.1",
