--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@types/node": "20.11.24",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
