--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/joy": "^5.0.0-beta.29",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.9.1",
     "@radix-ui/react-icons": "^1.3.0",
@@ -37,8 +40,8 @@
   "devDependencies": {
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "husky": "^8.0.3",
     "eslint-config-next": "14.1.0",
+    "husky": "^8.0.3",
     "postcss": "^8",
     "prisma": "^5.9.1",
     "tailwindcss": "^3.3.0"
