--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "sonner": "^1.4.0",
+    "swiper": "^11.0.7",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.3.3"
